Configuration before launching the app

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,8 @@ spring:
 
   frontend:
     base-url: ${FRONTEND_BASE_URL:http://localhost:3000/}
+
+  email:
+    verification:
+      expiry-minutes: 60
+      base-url: ${FRONTEND_BASE_URL:http://localhost:3000/}
