--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -2,3 +2,7 @@ databaseChangeLog:
   - include:
       file: 001-create-schema.sql
       relativeToChangelogFile: true
+
+  - include:
+      file: 002-add-accountid-to-sources.sql
+      relativeToChangelogFile: true
