--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres_password
       POSTGRES_DB: autotrade
+
+  adminer:
+    image: adminer
+    depends_on:
+      - db
+    ports:
+      - "8082:8080"
