--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,16 @@ spring:
     level:
       com.mishchuk.autotrade.config.TokenAuthFilter: DEBUG
       org.springframework.security: INFO
+
+  app:
+    kafka:
+      topic: ${APP_KAFKA_TOPIC:signals.raw}
+
+  spring:
+    kafka:
+      bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+      consumer:
+        group-id: autotrade-signals
+        auto-offset-reset: latest
+        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
