commit of a definitely working build

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${GMAIL_USERNAME:musterman@ggmail.com}
+    username: ${GMAIL_USERNAME:musterman@gmail.com}
     password: ${GMAIL_PASSWORD:my-secret-password}
     properties:
       mail:
@@ -23,32 +23,46 @@ spring:
           ssl:
             trust: smtp.gmail.com
 
+  kafka:
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:29092}
+    consumer:
+      group-id: autotrade-signals
+      auto-offset-reset: latest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
   jwt:
     secret: ${JWT_SECRET:ace6bc1c-c94c-40c3-8146-c0bda8381863}
     ttl-millis: ${JWT_TTL:43200000}
 
+  email:
+    verification:
+      expiry-minutes: ${EMAIL_VERIFICATION_TTL_MINUTES:60}
+      base-url: ${BACKEND_CONFIRM_URL:http://localhost:8080/auth/confirm}
+
   frontend:
     base-url: ${FRONTEND_BASE_URL:http://localhost:3000}
 
-  email:
-    verification:
-      expiry-minutes: 60
-      base-url: ${BACKEND_CONFIRM_URL:http://localhost:8080/auth/confirm}
+logging:
+  level:
+    com.mishchuk.autotrade.config.TokenAuthFilter: DEBUG
+    org.springframework.security: INFO
 
-  logging:
-    level:
-      com.mishchuk.autotrade.config.TokenAuthFilter: DEBUG
-      org.springframework.security: INFO
+email:
+  verification:
+    expiry-minutes: ${spring.email.verification.expiry-minutes}
+    base-url: ${spring.email.verification.base-url}
 
-  app:
-    kafka:
-      topic: ${APP_KAFKA_TOPIC:signals.raw}
+frontend:
+  base-url: ${spring.frontend.base-url}
 
-  spring:
-    kafka:
-      bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
-      consumer:
-        group-id: autotrade-signals
-        auto-offset-reset: latest
-        key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-        value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+jwt:
+  secret: ${spring.jwt.secret}
+  ttl-millis: ${spring.jwt.ttl-millis}
+
+app:
+  kafka:
+    topic: ${APP_KAFKA_TOPIC:signals.raw}
+
+app_kafka:
+  topic: ${APP_KAFKA_TOPIC:signals.raw}
