--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -26,3 +26,7 @@ databaseChangeLog:
   - include:
       file: 007-sources-token-nullable.sql
       relativeToChangelogFile: true
+
+  - include:
+      file: 008-drop-tdlib-session.sql
+      relativeToChangelogFile: true
